--- a/src/index.css
+++ b/src/index.css
@@ -119,94 +119,26 @@ display:none;}
 
 
 
-/* right icons navbar */
-.right-icons{display:flex;
-    margin-top:20px;
-    justify-content:flex-end;
-position:absolute;
-right:30px;}
-.right-icon{margin:10px 10px 10px 10px;}
-.right-icons a{text-decoration:none;
-color:#000;}
-.profile{
-    border:none;
-border-radius: 50%;
-height:30px;
-width:30px;
-background:#ddd;
-margin-right:40px;
-position:relative;
-}
-.profile span{position:absolute;
-   left:25px;
-    padding:5px;
-
-}
-.profile:hover{background:#ddd;
-border-radius:20px;}
-
-.menu{border:none;
-    border-radius: 50%;
-    height:30px;
-    width:30px; 
-    background:#ddd;
-    position:relative;
-}
-.menu:hover{background:#ddd;}
-.circle-dots{position:absolute;
-    top:5px;
-    left:5px;
-    margin:0; 
-    display:none;
-    font-size:20px;
-    color:#191919;
-    background:#ddd;
-}
- .menu-dots{display:flex;
-    position:absolute;
-    top:6px;
-    left:5px;
-    margin:0; 
-}
-
-.messenger{border:none;
-    border-radius: 50%;
-    height:30px;
-    width:30px;
-    background:#ddd;
-position:relative;}
-.fa-facebook-messenger{position:absolute;
-top:6px;
-left:7px;}
-
-.notification{border:none;
-    border-radius: 50%;
-    height:30px;
-    width:30px;
-    background:#ddd;
-position:relative;}
-.fa-bell{position:absolute;
-top:5px;left:8px;}
-
-
-.account{border:none;
-    border-radius: 50%;
-    height:30px;
-    width:30px;
-    background:#ddd;
-position:relative;}
-.fa-caret-down{position:absolute;
-top:5px;
-left:10px;
-}
-.prof-pic-r{
-    height:30px;
-    width:30px;
-    align-content:center;
+/* right navbar */
+.rightmenucontainer{
+    display:flex;
+    justify-content: center;
+    width:22vw;
+    height:70px;
+    margin-right:20px;
+    background:green;
     position:absolute;
     right:0px;
-    border-radius:50%;
 }
+.rightmenuwrapper{display:flex;
+padding-right:20px;
+width:90%;
+
+background:blue;}
+.navprofile img{height:30px;
+width:30px;
+border-radius:50%;
+margin-top:20px;}
 
 /* nav ends here */
 /* the left side bar */
