--- a/src/index.css
+++ b/src/index.css
@@ -397,11 +397,53 @@ background:#ddd;}
     border-radius:50%;
     align-content:center;
 }
+.postForm-container{
+    display:flex;    
+    min-height:20vh;
+    max-height:100vh;
+    width:100%;
+}
+.postForm{
+    display:flex;
+    flex-direction:column;
+    height:100%;
+    width:100%;
+    background:blue;
+    position:relative;
+}
+.postForm h2{
+    text-align:center;
+}
+.profT{
+    display:flex;
+    /* flex-direction:column; */
+}
+.profT span{
+    margin:20px;
+}
+    .smallProfile{
+    position:absolute;
+    top:10px;
+    left:-30px;
+    margin-right:20px;
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    align-content:center;
+}
+#commentPad{
+    height:100vh;
+    width: 100px;
+}
+.btn-post{display:block;
+    font-size:23px;}
 .input-content img:hover{
     background:#000;
 }
 
-.input-bar{width:35vw;
+.input-bar{
+    display:flex;
+    width:35vw;
     padding:10px;
     margin-top:10px;
     margin-right:20px;
@@ -450,6 +492,7 @@ background:#ddd;}
     color:orange;
     font-size:30px;
 }
+/* the chatrooms */
 .chatroom-container{
     display:flex;
     flex-direction:column;
