--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,7 @@ grid-template-columns:1fr 3fr 1fr;
 grid-column-gap:2px #fff;
 margin:20px;
 }
+/* leftsidebar */
 .left-sidebar{ 
 font-size:20px;
 display:flex;
