--- a/src/index.css
+++ b/src/index.css
@@ -121,25 +121,9 @@ display:none;}
 
 
 /* right navbar */
-.rightmenucontainer{
-    display:flex;
-    justify-content: center;
-    width:22vw;
-    height:70px;
-    margin-right:20px;
-    background:green;
-    position:absolute;
-    right:0px;
-}
-.rightmenuwrapper{display:flex;
-padding-right:20px;
-width:90%;
+/* copied to individual file */
 
-background:blue;}
-.navprofile img{height:30px;
-width:30px;
-border-radius:50%;
-margin-top:20px;}
+
 
 /* nav ends here */
 /* the left side bar */
