--- a/src/components/inputcontent.css
+++ b/src/components/inputcontent.css
@@ -1,6 +1,7 @@
 *{box-sizing:border-box;}
-.removeimage{display:flex;
+.removeimage{display:flex-box;
     flex-direction:column;
+    text-align:flex-end;
    
     cursor:pointer;
 }
@@ -12,7 +13,7 @@ height:2.5rem;
 width:2.5rem;}
 .textimage{
  color:red;
- font-size: normal;
+ font-size: 16px;
  font-weight:500;
  text-align:center;
 }
